<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
    <device id="retina6_1" orientation="portrait" appearance="light"/>
    <dependencies>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="System colors in document resources" minToolsVersion="11.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--Home View Controller-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController storyboardIdentifier="HomeViewController" id="BYZ-38-t0r" customClass="HomeViewController" customModule="CoordinatorPatternExample" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DWB-GB-fas">
                                <rect key="frame" x="24.5" y="292" width="158" height="50"/>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="filled" title="Move First">
                                    <fontDescription key="titleFontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="30"/>
                                </buttonConfiguration>
                                <connections>
                                    <action selector="moveFirstButtonDidTap:" destination="BYZ-38-t0r" eventType="touchUpInside" id="pH1-5V-jqr"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RNa-cC-IfN">
                                <rect key="frame" x="106.5" y="428" width="201" height="50"/>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="filled" title="Move Second">
                                    <fontDescription key="titleFontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="30"/>
                                </buttonConfiguration>
                                <connections>
                                    <action selector="moveSecondButtonDidTap:" destination="BYZ-38-t0r" eventType="touchUpInside" id="5Nv-LE-D1q"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eq7-Kw-BJz">
                                <rect key="frame" x="122.5" y="564" width="169" height="50"/>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="filled" title="Move Third">
                                    <fontDescription key="titleFontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="30"/>
                                </buttonConfiguration>
                                <connections>
                                    <action selector="moveThirdButtonDidTap:" destination="BYZ-38-t0r" eventType="touchUpInside" id="aN3-KK-5wG"/>
                                </connections>
                            </button>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Home" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cRs-g7-Gy2">
                                <rect key="frame" x="155.5" y="157" width="103.5" height="48"/>
                                <fontDescription key="fontDescription" type="system" pointSize="40"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BEl-36-nK6">
                                <rect key="frame" x="102.5" y="700" width="209.5" height="50"/>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="filled" title="Present Modal">
                                    <fontDescription key="titleFontDescription" type="system" pointSize="30"/>
                                </buttonConfiguration>
                                <connections>
                                    <action selector="presentModalButtonDidTap:" destination="BYZ-38-t0r" eventType="touchUpInside" id="fBK-sZ-kb0"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="baU-ZV-Q3I">
                                <rect key="frame" x="218" y="292" width="185" height="50"/>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="filled" title="Present First">
                                    <fontDescription key="titleFontDescription" type="system" pointSize="30"/>
                                </buttonConfiguration>
                                <connections>
                                    <action selector="presentFirstButtonDidTap:" destination="BYZ-38-t0r" eventType="touchUpInside" id="kkb-az-gKi"/>
                                </connections>
                            </button>
                        </subviews>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                        <constraints>
                            <constraint firstItem="DWB-GB-fas" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" multiplier="0.5" id="9Ff-hC-ObZ"/>
                            <constraint firstItem="baU-ZV-Q3I" firstAttribute="centerY" secondItem="6Tk-OE-BBY" secondAttribute="centerY" multiplier="0.7" id="C5m-7E-jIA"/>
                            <constraint firstItem="eq7-Kw-BJz" firstAttribute="centerY" secondItem="6Tk-OE-BBY" secondAttribute="centerY" multiplier="1.3" id="DW2-Zi-9R8"/>
                            <constraint firstItem="cRs-g7-Gy2" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="UeC-G2-hZ5"/>
                            <constraint firstItem="eq7-Kw-BJz" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="ZSc-rJ-lTN"/>
                            <constraint firstItem="DWB-GB-fas" firstAttribute="centerY" secondItem="6Tk-OE-BBY" secondAttribute="centerY" multiplier="0.7" id="j5M-Dp-TAY"/>
                            <constraint firstItem="baU-ZV-Q3I" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" multiplier="1.5" id="o4a-JO-XL5"/>
                            <constraint firstItem="BEl-36-nK6" firstAttribute="centerY" secondItem="6Tk-OE-BBY" secondAttribute="centerY" multiplier="1.6" id="pxB-2C-Dvq"/>
                            <constraint firstItem="RNa-cC-IfN" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="sNC-QM-9EK"/>
                            <constraint firstItem="RNa-cC-IfN" firstAttribute="centerY" secondItem="6Tk-OE-BBY" secondAttribute="centerY" id="vRX-N1-IAU"/>
                            <constraint firstItem="BEl-36-nK6" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="wMm-Hh-Ceg"/>
                            <constraint firstItem="cRs-g7-Gy2" firstAttribute="centerY" secondItem="6Tk-OE-BBY" secondAttribute="centerY" multiplier="0.4" id="xrQ-tJ-FL4"/>
                        </constraints>
                    </view>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="35" y="66"/>
        </scene>
    </scenes>
    <resources>
        <systemColor name="systemBackgroundColor">
            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
        </systemColor>
    </resources>
</document>
